--- a/Tests/Controltest/App.xaml
+++ b/Tests/Controltest/App.xaml
@@ -1,15 +1,16 @@
-﻿<Application x:Class="Controltest.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Controltest"
-             StartupUri="Window1.xaml">
+﻿<Application
+    x:Class="Controltest.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:Controltest"
+    StartupUri="Window6.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="pack://application:,,,/Hjmos.BaseControls;component/Themes/SkinDefault.xaml"/>
-                <ResourceDictionary Source="pack://application:,,,/Hjmos.BaseControls;component/Themes/Generic.xaml"/>
-                <ResourceDictionary Source="pack://application:,,,/Hjmos.CustomCharts;component/Themes/Generic.xaml"/>
-                <ResourceDictionary Source="pack://application:,,,/Hjmos.CommonControls;component/Themes/Generic.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/Hjmos.BaseControls;component/Themes/SkinDefault.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Hjmos.BaseControls;component/Themes/Generic.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Hjmos.CustomCharts;component/Themes/Generic.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Hjmos.CommonControls;component/Themes/Generic.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
