--- a/src/Hjmos.BaseControls/Themes/Basic/Converters.xaml
+++ b/src/Hjmos.BaseControls/Themes/Basic/Converters.xaml
@@ -29,4 +29,5 @@
     <converter:TreeViewItemMarginConverter x:Key="TreeViewItemMarginConverter" />
     <converter:BooleanArr2VisibilityConverter x:Key="BooleanArr2VisibilityConverter" />
     <converter:Long2FileSizeConverter x:Key="Long2FileSizeConverter" />
+    <converter:Object2BooleanConverter x:Key="Object2BooleanConverter"/>
 </ResourceDictionary>
