--- a/Demo/CefSharpDemo/MainWindow.xaml
+++ b/Demo/CefSharpDemo/MainWindow.xaml
@@ -1,22 +1,15 @@
 ﻿<Window
-    x:Class="WpfApp3.MainWindow"
+    x:Class="CefSharpDemo.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:WpfApp3"
+    xmlns:local="clr-namespace:CefSharpDemo"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="MainWindow"
     Width="800"
     Height="450"
-    IsEnabled="False"
     mc:Ignorable="d">
     <Grid>
-        <Button
-            Margin="495,210,0,0"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            Click="Button_Click"
-            Content="Button" />
-
+        <local:HjmosBrowser Address="https://www.baidu.com/" Cookie="{Binding Cookies}" />
     </Grid>
 </Window>
